# pitunes

./: .dockerignore  .env  .gitignore  .travis.yml  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.pwd.yml  docker-compose.yml  graphdoc.json  package.json  pitunes.afphoto  pitunes.db
.github/workflows/: ci.yml  main.yml
ci/arm-unknown-linux-musleabihf/: Dockerfile
ci/armv7-unknown-linux-musleabihf/: Dockerfile
migrations/: 1.sql
pitunes/: .gitignore  Cargo.toml  README.md
pitunes-client/: package.json
pitunes-client/public/: index.html
pitunes-graphdoc/: package.json
pitunes-server/: Cargo.toml  README.md
pitunes-server/migrations/2020-01-10-161908_create_table_albums/: up.sql
pitunes-server/migrations/2020-01-10-161917_create_table_artists/: up.sql
pitunes-server/migrations/2020-01-11-140929_create_table_tracks/: up.sql
pitunes-server/migrations/2020-03-17-185700_create_table_playlists/: up.sql
pitunes-server/migrations/2020-03-17-185910_create_table_playlists_tracks/: up.sql
pitunes-server/migrations/2020-12-18-230840_create_table_users/: up.sql
pitunes-server/migrations/2020-12-28-000321_create_table_prngs/: down.sql  up.sql
pitunes-server/src/: db.rs  external_id.rs  graphql_schema.rs  graphql_service.rs  main.rs  models.rs  playlists_service.rs  prng.rs  schema.rs  tracks_service.rs  upload_service.rs  uuid.rs
pitunes-tui/: Cargo.toml  README.md
pitunes-tui/src/: basic_auth.rs  constants.rs  http_stream_reader.rs  main.rs  models.rs  renderer.rs  requests.rs  retry.rs  state_machine.rs  states.rs
pitunes-tui/src/graphql/: album_query.graphql  album_tracks_query.graphql  artist_albums_query.graphql  artist_query.graphql  artist_tracks_query.graphql  create_album_mutation.graphql  create_genre_mutation.graphql  create_playlist_mutation.graphql  create_playlist_track_mutation.graphql  delete_album_mutation.graphql  delete_artist_mutation.graphql  delete_genre_mutation.graphql  delete_playlist_mutation.graphql  delete_playlist_track_mutation.graphql  delete_track_mutation.graphql  genre_query.graphql  genre_tracks_query.graphql  playlist_tracks_query.graphql  playlists_query.graphql  schema.json  track_query.graphql  tracks_query.graphql  update_album_mutation.graphql  update_artist_mutation.graphql  update_genre_mutation.graphql  update_playlist_mutation.graphql  update_playlist_track_mutation.graphql  update_track_mutation.graphql
pitunes/.cargo/: config.toml
pitunes/migrations/2020-01-10-161908_create_table_albums/: up.sql
pitunes/migrations/2020-01-10-161917_create_table_artists/: up.sql
pitunes/migrations/2020-01-10-161927_create_table_genres/: up.sql
pitunes/migrations/2020-01-11-140929_create_table_tracks/: down.sql  up.sql
pitunes/migrations/2020-03-17-185700_create_table_playlists/: down.sql
pitunes/migrations/2020-03-17-185910_create_table_playlists_tracks/: down.sql  up.sql
pitunes/src/: db.rs  external_id.rs  graphql_schema.rs  main.rs  mk_certs.rs  playlists_service.rs
pitunes_client/: Cargo.toml  README.md
pitunes_client/src/: constants.rs  event.rs  http_stream_reader.rs  main.rs  models.rs  my_gauge.rs  reducers.rs  renderer.rs  requests.rs  selectable_list_2.rs  state_machine.rs  states.rs
pitunes_client/src/graphql/: album_query.graphql  album_tracks_query.graphql  artist_query.graphql  artist_tracks_query.graphql  artists_query.graphql  create_artist_mutation.graphql  delete_playlist_mutation.graphql  genre_query.graphql  genre_tracks_query.graphql  playlist_query.graphql  playlist_tracks_query.graphql  schema.json  track_query.graphql  tracks_query.graphql  update_artist_mutation.graphql  update_playlist_mutation.graphql  update_playlist_track_mutation.graphql  update_track_mutation.graphql
pitunes_client/src/util/: event.rs  mod.rs  renderer.rs  stateful_list.rs
pitunes_frontend/: Cargo.toml  README.md  build.rs
pitunes_frontend/pitunes-frontend/: package.json
pitunes_frontend/pitunes-frontend/public/: manifest.json
pitunes_frontend/pitunes-frontend/src/: AddItemDialogComponent.tsx  AlbumComponent.tsx  AlbumListItems.tsx  AlbumsComponent.tsx  App.tsx  ArtistComponent.tsx  ArtistsComponent.tsx  ConfirmationDialogComponent.tsx  EmptyListComponent.tsx  FilterableItems.tsx  FormDialogComponent.tsx  GenreComponent.tsx  GenresComponent.tsx  GraphQLResource.tsx  GraphiQLComponent.tsx  IdNameListItemLinks.tsx  LinearProgressWithLabel.tsx  ListItemLink.tsx  LoadingComponent.tsx  MenuComponent.tsx  NestedMenuItem.tsx  PlayerComponent.tsx  PlaylistComponent.tsx  PlaylistDialog.tsx  PlaylistDialogComponent.tsx  PlaylistsComponent.tsx  ResponsiveDrawer.tsx  SearchComponent.tsx  SearchableList.tsx  TitleComponent.tsx  TrackComponent.tsx  TrackListItems.tsx  TracksComponent.tsx  TransitionRoute.css  TransitionRoute.tsx  UploadComponent.tsx  UploadDropZoneComponent.tsx  dark.json  dark.json.bak  fetcher.ts  (+13 more)
pitunes_frontend/pitunes-frontend/src/graphql/: AlbumTracksQuery.graphql  AlbumsArtistsGenresPlaylistsQuery.graphql  AlbumsQuery.graphql  CreateArtistMutation.graphql  CreateGenreMutation.graphql  CreatePlaylistTrackMutation.graphql  DeleteAlbumMutation.graphql  DeleteArtistMutation.graphql  DeletePlaylistMutation.graphql  DeletePlaylistTrackMutation.graphql  DeleteTrackMutation.graphql  GenreTracksQuery.graphql  PlaylistTracksQuery.graphql  TrackQuery.graphql  TracksQuery.graphql  UpdateAlbumMutation.graphql  UpdateArtistMutation.graphql  UpdateGenreMutation.graphql  UpdatePlaylistMutation.graphql  UpdateTrackMutation.graphql  api.ts  fetcher.ts
pitunes_frontend/src/: lib.rs
pitunes_server/: Cargo.toml  README.md
src/: album_service.rs  artist_service.rs  db.rs  genre_service.rs  graphql_schema.rs  graphql_service.rs  main.rs  migration.rs  models.rs  schema.rs  song_service.rs  upload_service.rs
(+53 files in other folders)
