[package]
name = "pitunes"
version = "0.1.0"
authors = ["Bernhard Fritz <bernhard.e.fritz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
chrono = { version = "0.4.10", features = ["serde"] }
clap = "2.33.0"
r2d2 = "0.8.8"
r2d2_sqlite = "0.13.0"
rusqlite = { version = "0.21.0", features = ["chrono"] }
serde = "1.0.104"
toml = "0.5.5"