[package]
name = "pitunes"
version = "0.1.0"
authors = ["Bernhard Fritz <bernhard.e.fritz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-multipart = "0.2.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
chrono = { version = "0.4.10", features = ["serde"] }
clap = "2.33.0"
diesel = { version = "1.4.3", features = ["chrono", "r2d2", "sqlite"] }
dotenv = "0.15.0"
id3 = "0.3.0"
juniper = { version = "0.14.2", features = ["chrono"] }
serde_json = "1.0.44"