[package]
name = "pitunes-tui"
version = "0.1.0"
authors = ["Bernhard Fritz <bernhard.e.fritz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossterm = "0.18.2"
dotenv = "0.15.0"
exponential-backoff = "0.2.2"
failure = "0.1.6"
fuzzy-matcher = "0.3.5"
graphql_client = "0.8.0"
rodio = "0.12.0"
rustls = "0.19.0"
serde = "1.0.104"
tui = { version = "0.12.0", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.7"
ureq = { version = "2.0.0-rc2", features = ["json"] }