[package]
name = "pitunes"
version = "0.1.0"
authors = ["Bernhard Fritz <bernhard.e.fritz@gmail.com>"]
edition = "2018"
description = "A Raspberry Pi compatible tool that allows you to manage and stream your personal music collection remotely."
license = "MIT"
repository = "https://github.com/bernhardfritz/pitunes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.4.0"
actix-multipart = "0.3.0"
actix-rt = "1.1.1"
actix-web = { version = "3.2.0", features = ["openssl"] }
actix-web-httpauth = "0.5.0"
actix-web-middleware-redirect-scheme = "3.0.0"
actix-web-static-files = "3.0.5"
anyhow = "1.0.37"
async-trait = "0.1.41"
base64 = "0.13.0"
chrono = { version = "0.4.10", features = ["serde"] }
clap = "2.33.0"
dataloader = "0.12.0"
diesel = { version = "1.4.3", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "1.4.0"
dirs = "3.0.1"
futures = "0.3.1"
getrandom = { version = "0.2.0", features = ["std"] }
id3 = "0.3.0"
juniper = { version = "0.14.2", features = ["chrono"] }
libsqlite3-sys = { version = "0.16.0", features = ["bundled"] }
mp3-duration = "0.1.10"
oorandom = "11.1.3"
openssl = { version = "0.10.48", features = ["v110", "vendored"] }
pitunes_frontend = { path = "../pitunes_frontend", version = "0.1.0" }
serde_json = "1.0.44"
sha2 = "0.8.1"
tempfile = "3.1.0"
