[package]
name = "pitunes_client"
version = "0.1.0"
authors = ["Bernhard Fritz <bernhard.e.fritz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dotenv = "0.15.0"
failure = "0.1.6"
graphql_client = "0.8.0"
if_chain = "1.0.0"
reqwest = { version = "0.10.1", features = [ "blocking", "json" ] }
rodio = "0.11.0"
serde = "1.0.104"
termion = "1.5"
tui = "0.8"
unicode-width = "0.1.7"
